# tg

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  convert.py  redis.conf  tg.toml
sql/: create.sql  getchatusers.sql  getcommandid.sql  getcommandidfunction.sql  geteditpercentage.sql  getmessagebyuser.sql  getmessages.sql  getmessagesdata.sql  getmessagetext.sql  getrandomusermessage.sql  getstickercounts.sql  getstickerfromhash.sql  getstickerstats.sql  getuseridfromname.sql  getusermessagecount.sql  getwordcounts.sql  getwordusage.sql  logcommand.sql  logedit.sql  logmessage.sql  logsticker.sql  updateuserdata.sql
sql/disaster/: addpoint.sql  getchatpoints.sql  getuserpoints.sql
src/: chat.rs  commands.rs  db.rs  handlers.rs  main.rs  redis.rs  telegram.rs  update.rs  user.rs  util.rs
src/commands/: disaster.rs  stickerlog.rs
src/telegram/: chat.rs  message.rs  update.rs  user.rs
src/telegram/update/: message.rs  updatestream.rs
src/update/: message.rs  updatestream.rs
