[package]
authors = ["Bunogi <2bunogi@gmail.com>"]
edition = "2018"
name = "tg"
version = "0.1.0"

[dependencies]
cairo-rs = { version = "0.8.0", features = ["png"] }
chrono = "0.4.6"
deadpool-postgres = "0.5.0"
env_logger = "0.7.1"
futures = "0.3.1"
lazy_static = "1.3.0"
libc = "0.2.58"
libwebp-sys = "0.2.0"
log = "0.4.6"
markov = "1.0.2"
md-5 = "0.8.0"
num_cpus = "1.10.1"
quick-error = "1.2.2"
reqwest = { version = "0.10.1", features = ["json"] }
rmp-serde = "0.14.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
tokio = { version = "0.2.5", features = ["full"] }
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4"] }
toml = "0.5.1"
unicode-segmentation = "1.3.0"

[dependencies.darkredis]
version = "0.6.1"
default-features = false
features = ["runtime_tokio"]