[package]
authors = ["Bunogi <2bunogi@gmail.com>"]
edition = "2018"
name = "tg"
version = "0.1.0"

[dependencies]
cairo-rs = { version = "0.18.0", features = ["png"] }
chrono = "0.4.6"
darkredis = "0.8.0"
deadpool-postgres = "0.9.0"
env_logger = "0.9.0"
futures = "0.3.1"
lazy_static = "1.3.0"
libc = "0.2.58"
libwebp-sys = "0.4.0"
log = "0.4.6"
markov = "1.0.2"
md-5 = "0.9.1"
num_cpus = "1.10.1"
reqwest = { version = "0.11.4", features = ["json", "multipart"] }
rmp-serde = "0.15.5"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
tokio = { version = "1.10.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4"] }
toml = "0.5.1"
unicode-segmentation = "1.3.0"
